--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,11 @@ targetCompatibility = 1.8
 
 repositories {
 	jcenter()
+	maven { url "http://www.systap.com/maven/releases" }
 	maven { url "https://repo.eclipse.org/content/groups/acceleo" }
-	maven { url "http://docs.inf.mit.bme.hu/trainbenchmark-deps" }
+	maven { url "https://repo.eclipse.org/content/groups/viatra2" }
 	maven { url "https://raw.github.com/neo4j-contrib/m2/master/releases" }
+	maven { url "http://docs.inf.mit.bme.hu/trainbenchmark-deps" }
 }
 
 dependencies {
