--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
+script:
+  - ./gradlew assemble check
+  - ./gradlew assemble check --offline
+  - ./gradlew assemble check
